Extend Specs
